<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The groupId must be the same for everybody -->
  <groupId>it.polimi.ingsw</groupId>
  <!-- Change the artifactId depending on your group number
           (example: group 99 will have artifactId PSP99 -->
  <artifactId>PSP52</artifactId>

  <version>1.0-SNAPSHOT</version>
  <name>Eryantis</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>18</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>18</version>
    </dependency>

    <!-- JUnit provides unit testing for Java applications -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Compiler plugin, sets the Java version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <id>ServerMain-jar</id>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>ServerMain</finalName>
              <transformers>
                <transformer implementation= "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>it.polimi.ingsw.network.server.ServerMain</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
          <execution>
            <id>ClientMain-jar</id>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>ClientMain</finalName>
              <transformers>
                <transformer implementation= "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>it.polimi.ingsw.network.client.ClientMain</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
